force-app/main/default/objects/DMAPP__DM_Opportunity_Extra__c/fields/DMAPP__Amount__c.field-meta.xml
<CustomField>
    <fullName>DMAPP__Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>