force-app/main/default/objects/DMAPP__DM_Opportunity_Extra__c/fields/DMAPP__Sales_Process_Stage_Name__c.field-meta.xml
<CustomField>
    <fullName>DMAPP__Sales_Process_Stage_Name__c</fullName>
    <description>Qualification Sales Process Stage Name</description>
    <inlineHelpText>Qualification Sales Process Stage N</inlineHelpText>
    <label>Qualification Sales Process Stage Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>